Fixed spacing

--- a/src/scss/Includes/_features-block.scss
+++ b/src/scss/Includes/_features-block.scss
@@ -1,4 +1,5 @@
 .bat-features-block {
+  background-color: $wild-sand;
   &__img {
     width: 100%;
     &--metro {
